2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/config.h.in, include/pqxx/util.hxx:
 - Remove support for obsolete std::tr1 namespace; just use std.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Remove obsolete or redundant g++ options: -ffor-scope, -fstrict-aliasing,
   -Wstrict-aliasing, -funit-at-a-time, -Wmultichar, -W, -Wswitch,
   -Wmissing-field-initializers.
2015-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.0/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.1/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.2/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.3/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.4/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/9.0/pqxx/config-internal-libpq.h,
 configitems, configure.ac.in, include/pqxx/config.h.in,
 src/connection_base.cxx:
 - Remove workaround for missing PQclientEncoding.
2015-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/MinGW-3.4/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3-apple/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3-apple/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.2/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/compiler-internal.hxx,
 include/pqxx/config.h.in, include/pqxx/cursor.hxx, include/pqxx/pipeline.hxx,