@@ -1,4 +1,7 @@
 2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ config/sample-headers/compiler/VisualStudio2008:
+ - Remove support for Visual Studio 2008 (still needs std::tr1).
+2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
  config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
  config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
  configitems, configure.ac.in, include/pqxx/config.h.in, include/pqxx/util.hxx:
